force-app/main/default/objects/PlanogramCompliance__c/PlanogramCompliance__c.object-meta.xml
<CustomObject>
    <label>Planogram Compliance</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Compliance Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planogram Compliance Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>