force-app/main/default/objects/PlanogramCompliance__c/fields/ActualFacings__c.field-meta.xml
<CustomField>
    <fullName>ActualFacings__c</fullName>
    <label>Actual Facings Detected</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>