force-app/main/default/objects/PlanogramCompliance__c/fields/ActualPosition__c.field-meta.xml
<CustomField>
    <fullName>ActualPosition__c</fullName>
    <label>Actual Shelf Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>