force-app/main/default/objects/PlanogramCompliance__c/fields/ExpectedFacings__c.field-meta.xml
<CustomField>
    <fullName>ExpectedFacings__c</fullName>
    <label>Expected Facings</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>