force-app/main/default/objects/PlanogramCompliance__c/fields/ExpectedPosition__c.field-meta.xml
<CustomField>
    <fullName>ExpectedPosition__c</fullName>
    <label>Expected Shelf Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>