force-app/main/default/objects/PlanogramCompliance__c/fields/IsCompliant__c.field-meta.xml
<CustomField>
    <fullName>IsCompliant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Compliant</label>
    <type>Checkbox</type>
</CustomField>