force-app/main/default/objects/PlanogramCompliance__c/fields/RecommendedAction__c.field-meta.xml
<CustomField>
    <fullName>RecommendedAction__c</fullName>
    <label>Recommended Action</label>
    <type>TextArea</type>
</CustomField>