force-app/main/default/objects/PlanogramCompliance__c/fields/ShelfAudit__c.field-meta.xml
<CustomField>
    <fullName>ShelfAudit__c</fullName>
    <label>Shelf Audit</label>
    <referenceTo>ShelfAudit__c</referenceTo>
    <relationshipLabel>Planogram Compliance Records</relationshipLabel>
    <relationshipName>PlanogramComplianceRecords</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>